# coding-challenges

./: .gitignore  .gitmodules  README.md
binary_crash_debugging/: README.md
binary_crash_debugging/doc/: analysis_a.md  analysis_b.md
counting_uniques_in_file/: .gitignore  CMakeLists.txt
counting_uniques_in_file/include/alg/: alg.h  bitarray.h
counting_uniques_in_file/include/common/: error.h
counting_uniques_in_file/include/storage/: file.h
counting_uniques_in_file/src/: CMakeLists.txt
counting_uniques_in_file/src/alg/: CMakeLists.txt  alg.c  bitarray.c
counting_uniques_in_file/src/storage/: CMakeLists.txt  file.c
counting_uniques_in_file/test/: CMakeLists.txt  test.c
fizzbuzz_no_condition/: .gitignore  CMakeLists.txt
fizzbuzz_no_condition/include/: types.h
fizzbuzz_no_condition/src/: fizzbuzz.c  main.c
json_stream_on_low_resource/: .gitignore  CMakeLists.txt  README.md
json_stream_on_low_resource/include/model/: model.h
json_stream_on_low_resource/src/: CMakeLists.txt  model.c
json_stream_on_low_resource/tests/: CMakeLists.txt  test.c
