# Configuration
cmake_minimum_required(VERSION 3.1 FATAL_ERROR)
project(json_stream LANGUAGES C VERSION 1.0.0)


# Options
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)


# Subdirectories
add_subdirectory(src)
add_subdirectory(tests)


# Variables


# Packages


# Executables


# Libraries


# Include Directories

